Update slides for new links.

--- a/slides/html/1-getting_started_with_pandas.slides.html
+++ b/slides/html/1-getting_started_with_pandas.slides.html
@@ -14722,7 +14722,7 @@ div.jp-OutputPrompt {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_anatomy-of-a-dataframe" data-mime-type="text/markdown">
 <h2 id="Anatomy-of-a-DataFrame">Anatomy of a DataFrame<a class="anchor-link" href="#Anatomy-of-a-DataFrame">&#182;</a></h2><p>A <strong>DataFrame</strong> is composed of one or more <strong>Series</strong>. The names of the <strong>Series</strong> form the column names, and the row labels form the <strong>Index</strong>.</p>
 
 </div>
@@ -14887,7 +14887,7 @@ div.jp-OutputPrompt {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_series" data-mime-type="text/markdown">
 <h4 id="Series:">Series:<a class="anchor-link" href="#Series:">&#182;</a></h4>
 </div>
 </div>
@@ -14944,7 +14944,7 @@ Name: name, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_columns-and-index" data-mime-type="text/markdown">
 <h4 id="Columns:">Columns:<a class="anchor-link" href="#Columns:">&#182;</a></h4>
 </div>
 </div>
@@ -15068,7 +15068,7 @@ Name: name, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_creating-dataframes" data-mime-type="text/markdown">
 <h2 id="Creating-DataFrames">Creating DataFrames<a class="anchor-link" href="#Creating-DataFrames">&#182;</a></h2><p>We can create DataFrames from a variety of sources such as other Python objects, flat files, webscraping, and API requests. Here, we will see just a couple of examples, but be sure to check out <a href="https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html">this page</a> in the documentation for a complete list.</p>
 
 </div>
@@ -15080,7 +15080,7 @@ Name: name, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_read-csv" data-mime-type="text/markdown">
 <h3 id="Using-a-flat-file">Using a flat file<a class="anchor-link" href="#Using-a-flat-file">&#182;</a></h3>
 </div>
 </div>
@@ -15109,7 +15109,7 @@ Name: name, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_api-request" data-mime-type="text/markdown">
 <h3 id="Using-data-from-an-API">Using data from an API<a class="anchor-link" href="#Using-data-from-an-API">&#182;</a></h3><p>Collect the data from <a href="https://data.nasa.gov/Space-Science/Meteorite-Landings/gh4g-9sfh">NASA's Open Data Portal</a> using the Socrata Open Data API (SODA) with the <code>requests</code> library:</p>
 
 </div>
@@ -15148,7 +15148,7 @@ Name: name, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_create-from-payload" data-mime-type="text/markdown">
 <p>Create the DataFrame with the resulting payload:</p>
 
 </div>
@@ -15313,7 +15313,7 @@ Name: name, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_inspecting-the-data" data-mime-type="text/markdown">
 <h2 id="Inspecting-the-data">Inspecting the data<a class="anchor-link" href="#Inspecting-the-data">&#182;</a></h2><p>Now that we have some data, we need to perform an initial inspection of it. This gives us information on what the data looks like, how many rows/columns there are, and how much data we have.</p>
 
 </div>
@@ -15337,7 +15337,7 @@ Name: name, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_rows-and-columns" data-mime-type="text/markdown">
 <h4 id="How-many-rows-and-columns-are-there?">How many rows and columns are there?<a class="anchor-link" href="#How-many-rows-and-columns-are-there?">&#182;</a></h4>
 </div>
 </div>
@@ -15443,7 +15443,7 @@ Name: name, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_dtypes" data-mime-type="text/markdown">
 <h4 id="What-type-of-data-does-each-column-currently-hold?">What type of data does each column currently hold?<a class="anchor-link" href="#What-type-of-data-does-each-column-currently-hold?">&#182;</a></h4>
 </div>
 </div>
@@ -15505,7 +15505,7 @@ dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_head" data-mime-type="text/markdown">
 <h4 id="What-does-the-data-look-like?">What does the data look like?<a class="anchor-link" href="#What-does-the-data-look-like?">&#182;</a></h4>
 </div>
 </div>
@@ -15654,7 +15654,7 @@ dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_tail" data-mime-type="text/markdown">
 <p>Sometimes there may be extraneous data at the end of the file, so checking the bottom few rows is also important:</p>
 
 </div>
@@ -15804,7 +15804,7 @@ dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_info-method" data-mime-type="text/markdown">
 <h4 id="Get-some-information-about-the-DataFrame">Get some information about the DataFrame<a class="anchor-link" href="#Get-some-information-about-the-DataFrame">&#182;</a></h4>
 </div>
 </div>
@@ -16176,7 +16176,7 @@ memory usage: 3.5+ MB
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_extracting-subsets" data-mime-type="text/markdown">
 <h2 id="Extracting-subsets">Extracting subsets<a class="anchor-link" href="#Extracting-subsets">&#182;</a></h2><p>A crucial part of working with DataFrames is extracting subsets of the data: finding rows that meet a certain set of criteria, isolating columns/rows of interest, etc. After narrowing down our data, we are closer to discovering insights. This section will be the backbone of many analysis tasks.</p>
 
 </div>
@@ -16188,7 +16188,7 @@ memory usage: 3.5+ MB
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_selecting-columns" data-mime-type="text/markdown">
 <h4 id="Selecting-columns">Selecting columns<a class="anchor-link" href="#Selecting-columns">&#182;</a></h4><p>We can select columns as attributes if their names would be valid Python variables:</p>
 
 </div>
@@ -16385,7 +16385,7 @@ Name: name, Length: 45716, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_selecting-rows" data-mime-type="text/markdown">
 <h4 id="Selecting-rows">Selecting rows<a class="anchor-link" href="#Selecting-rows">&#182;</a></h4>
 </div>
 </div>
@@ -16521,7 +16521,7 @@ Name: name, Length: 45716, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_indexing" data-mime-type="text/markdown">
 <h4 id="Indexing">Indexing<a class="anchor-link" href="#Indexing">&#182;</a></h4><p>We use <code>iloc[]</code> to select rows and columns by their position:</p>
 
 </div>
@@ -16736,7 +16736,7 @@ Name: name, Length: 45716, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_filtering-with-boolean-masks" data-mime-type="text/markdown">
 <h4 id="Filtering-with-Boolean-masks">Filtering with Boolean masks<a class="anchor-link" href="#Filtering-with-Boolean-masks">&#182;</a></h4><p>A <strong>Boolean mask</strong> is a array-like structure of Boolean values &ndash; it's a way to specify which rows/columns we want to select (<code>True</code>) and which we don't (<code>False</code>).</p>
 
 </div>
@@ -16986,7 +16986,7 @@ Length: 45716, dtype: bool</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_query-method" data-mime-type="text/markdown">
 <p>An alternative to this is the <code>query()</code> method:</p>
 
 </div>
@@ -17166,7 +17166,7 @@ Length: 45716, dtype: bool</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_calculating-summary-statistics" data-mime-type="text/markdown">
 <h2 id="Calculating-summary-statistics">Calculating summary statistics<a class="anchor-link" href="#Calculating-summary-statistics">&#182;</a></h2><p>In the next section of this workshop, we will discuss data cleaning for a more meaningful analysis of our datasets; however, we can already extract some interesting insights from the <code>meteorites</code> data by calculating summary statistics.</p>
 
 </div>
@@ -17178,7 +17178,7 @@ Length: 45716, dtype: bool</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_value-counts" data-mime-type="text/markdown">
 <h4 id="How-many-of-the-meteorites-were-found-versus-observed-falling?">How many of the meteorites were found versus observed falling?<a class="anchor-link" href="#How-many-of-the-meteorites-were-found-versus-observed-falling?">&#182;</a></h4>
 </div>
 </div>
@@ -17244,7 +17244,7 @@ Name: fall, dtype: int64</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_quantiles" data-mime-type="text/markdown">
 <h4 id="What-was-the-mass-of-the-average-meterorite?">What was the mass of the average meterorite?<a class="anchor-link" href="#What-was-the-mass-of-the-average-meterorite?">&#182;</a></h4>
 </div>
 </div>
@@ -17353,7 +17353,7 @@ Name: mass (g), dtype: float64</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_max-and-idxmax" data-mime-type="text/markdown">
 <h4 id="What-was-the-mass-of-the-heaviest-meteorite?">What was the mass of the heaviest meteorite?<a class="anchor-link" href="#What-was-the-mass-of-the-heaviest-meteorite?">&#182;</a></h4>
 </div>
 </div>
@@ -17483,7 +17483,7 @@ Name: 16392, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_unique-and-nunique" data-mime-type="text/markdown">
 <h4 id="How-many-different-types-of-meteorite-classes-are-represented-in-this-dataset?">How many different types of meteorite classes are represented in this dataset?<a class="anchor-link" href="#How-many-different-types-of-meteorite-classes-are-represented-in-this-dataset?">&#182;</a></h4>
 </div>
 </div>
@@ -17602,7 +17602,7 @@ Name: 16392, dtype: object</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_describe-method" data-mime-type="text/markdown">
 <h4 id="Get-some-summary-statistics-on-the-data-itself">Get some summary statistics on the data itself<a class="anchor-link" href="#Get-some-summary-statistics-on-the-data-itself">&#182;</a></h4><p>We can get common summary statistics for all columns at once. By default, this will only be numeric columns, but here, we will summarize everything together:</p>
 
 </div>
@@ -18153,7 +18153,7 @@ require(
                       Reveal.slide(slideIndices.h, slideIndices.v, 100); // set fragment to large number to ensure the full slide is displayed
                     }
                     else if (typeof input === "string" || input instanceof String) {
-                        const slideName = input.replace(' ', '-');
+                        const slideName = input.replaceAll(' ', '-');
                         if (namedSlides.includes(slideName)) window.location = `#/${slideName}`;
                     }
                 }
