Remove reference to soon to be deprecated append() method.

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -21910,7 +21910,7 @@ Name: year, dtype: float64</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><em>Tip: There are many parameters for this method, so be sure to check out the <a href="https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html">documentation</a>. To append rows, take a look at <code>append()</code> and <code>pd.concat()</code>.</em></p>
+<p><em>Tip: There are many parameters for this method, so be sure to check out the <a href="https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html">documentation</a>. To append rows, take a look at the <code>pd.concat()</code> function.</em></p>
 
 </div>
 </div>
