--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -14704,9 +14704,9 @@ div.jp-OutputPrompt {
 <h2 id="Bio">Bio<a class="anchor-link" href="#Bio">&#182;</a></h2><ul>
 <li>Software engineer and data scientist at Bloomberg in New York City</li>
 <li>Working in information security</li>
-<li>Author of <a href="https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/">Hands-On Data Analysis with Pandas</a> (currently in its second edition)</li>
+<li>Author of <a href="https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/">Hands-On Data Analysis with Pandas</a> (currently in its second edition; translated into Korean)</li>
 <li>BS in operations research from Columbia University</li>
-<li>Currently pursuing MS in computer science (ML specialization) from Georgia Tech</li>
+<li>MS in computer science (ML specialization) from Georgia Tech</li>
 </ul>
 
 </div>
